fix spacing around hr

--- a/assets/css/nemo-theme.css
+++ b/assets/css/nemo-theme.css
@@ -208,7 +208,7 @@ th {
 hr {
   border: none;
   border-top: 1px solid #e2e2e2;
-  margin: 2.3em 0;
+  margin: 1.5em 0;
 }
 
 /* ===== MathJax (optional, for math notes) ===== */
